# Pico-W-Flashcard-Display

./: readme.md
CSV Conversion Python Script/: ankiToCSV.py
PICO_Flashcard_Display_C/: CMakeLists.txt  lwipopts.h  main.c
PICO_Flashcard_Display_C/lib/Config/: DEV_Config.c
PICO_Flashcard_Display_C/lib/HTTPS/: CMakeLists.txt  picohttps.c  picohttps.h
PICO_Flashcard_Display_C/lib/OLED/: OLED_1in3_c.c
